--- a/Airline_ML_Classification_Capstone_.ipynb
+++ b/Airline_ML_Classification_Capstone_.ipynb
@@ -255,14 +255,14 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "\n",
-        "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sklearn.metrics import classification_report, accuracy_score, confusion_matrix\n",
+        "from sklearn.model_selection import train_test_split, GridSearchCV, RandomizedSearchCV, cross_val_score, cross_val_predict\n",
+        "from sklearn.metrics import classification_report, accuracy_score, confusion_matrix, precision_score, recall_score, f1_score\n",
         "\n",
         "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
         "\n",
-        "from sklearn.model_selection import cross_val_score\n",
-        "from sklearn.tree import DecisionTreeClassifier"
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.ensemble import RandomForestClassifier"
       ],
       "metadata": {
         "id": "M8Vqi-pPk-HR"
@@ -2227,46 +2227,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### 1. Explain the ML Model used and it's performance using Evaluation metric Score Chart."
+        "#### 1. Explain the ML Model used and it's performance using Evaluation metric Score Chart.\n",
+        "Explained later"
       ],
       "metadata": {
         "id": "ArJBuiUVfxKd"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Visualizing evaluation Metric Score chart\n",
-        "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
-        "\n",
-        "# Calculate evaluation metrics\n",
-        "accuracy = accuracy_score(y_test, y_pred)\n",
-        "precision = precision_score(y_test, y_pred, average='weighted')\n",
-        "recall = recall_score(y_test, y_pred, average='weighted')\n",
-        "f1 = f1_score(y_test, y_pred, average='weighted')\n",
-        "\n",
-        "# Create a dictionary to store metric scores\n",
-        "metric_scores = {'Accuracy': accuracy, 'Precision': precision, 'Recall': recall, 'F1 Score': f1}\n",
-        "\n",
-        "# Convert the dictionary into a Pandas DataFrame for plotting\n",
-        "metric_df = pd.DataFrame.from_dict(metric_scores, orient='index', columns=['Score'])\n",
-        "\n",
-        "# Reset the index for better plotting\n",
-        "metric_df.reset_index(inplace=True)\n",
-        "metric_df.rename(columns={'index': 'Metric'}, inplace=True)\n",
-        "\n",
-        "# Create a bar chart\n",
-        "plt.figure(figsize=(10, 6))\n",
-        "sns.barplot(x='Metric', y='Score', data=metric_df, palette='viridis')\n",
-        "plt.title('Evaluation Metric Scores')\n",
-        "plt.ylim(0, 1)  # Set y-axis limit to match the range of metric scores (0 to 1)\n",
-        "plt.show()\n"
-      ],
-      "metadata": {
-        "id": "rqD5ZohzfxKe"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2396,6 +2362,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "92% accuracy with Random Forest"
+      ],
+      "metadata": {
+        "id": "g2yVmZNYfB2E"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#report of decision tree\n",
@@ -2404,35 +2379,6 @@
       ],
       "metadata": {
         "id": "Zo-Zvp4gJUXH"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "92% accuracy with Random Forest"
-      ],
-      "metadata": {
-        "id": "-rvNSquhJaIp"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### 1. Explain the ML Model used and it's performance using Evaluation metric Score Chart."
-      ],
-      "metadata": {
-        "id": "JWYfwnehpsJ1"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Visualizing evaluation Metric Score chart"
-      ],
-      "metadata": {
-        "id": "yEl-hgQWpsJ1"
       },
       "execution_count": null,
       "outputs": []
@@ -2449,14 +2395,43 @@
     {
       "cell_type": "code",
       "source": [
-        "# ML Model - 1 Implementation with hyperparameter optimization techniques (i.e., GridSearch CV, RandomSearch CV, Bayesian Optimization etc.)\n",
+        "# Define the parameter grid for hyperparameter tuning\n",
+        "parameters = {\"criterion\":[\"gini\",\"entropy\"],\"max_depth\":[5,7],\"min_samples_split\":[5,7],\"min_samples_leaf\":[2,3]}\n",
+        "\n",
+        "# ML Model - 2 Implementation with hyperparameter optimization techniques (i.e., GridSearch CV, RandomSearch CV, Bayesian Optimization etc.)\n",
+        "random_forest_gridcv = GridSearchCV(estimator=random_forest,\n",
+        "                       param_grid = parameters,\n",
+        "                       cv = 5, verbose=2)\n",
         "\n",
         "# Fit the Algorithm\n",
-        "\n",
-        "# Predict on the model"
+        "random_forest_gridcv.fit(x_train, y_train)"
       ],
       "metadata": {
         "id": "Dn0EOfS6psJ2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get the best hyperparameters from the grid search\n",
+        "best_params = random_forest_gridcv.best_params_\n",
+        "print(\"Best Hyperparameters:\", best_params)"
+      ],
+      "metadata": {
+        "id": "8XFnSHrzWqmE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "random_forest_gridcv.best_score_"
+      ],
+      "metadata": {
+        "id": "1bKdC2ODXjfi"
       },
       "execution_count": null,
       "outputs": []
@@ -2473,7 +2448,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "GridSearchCV"
       ],
       "metadata": {
         "id": "9kBgjYcdpsJ2"
@@ -2491,28 +2466,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "93% accuracy of Decision Tree with the help of hypermatring tunning."
       ],
       "metadata": {
         "id": "74yRdG6UpsJ3"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### 3. Explain each evaluation metric's indication towards business and the business impact pf the ML model used."
-      ],
-      "metadata": {
-        "id": "bmKjuQ-FpsJ3"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "BDKtOrBQpsJ3"
       }
     },
     {
@@ -2528,10 +2485,16 @@
       "cell_type": "code",
       "source": [
         "# ML Model - 3 Implementation\n",
+        "log_reg = LogisticRegression(fit_intercept=True, max_iter=10000)\n",
+        "\n",
         "\n",
         "# Fit the Algorithm\n",
+        "log_reg.fit(x_train, y_train)\n",
         "\n",
-        "# Predict on the model"
+        "print(log_reg.coef_)\n",
+        "print(log_reg.intercept_)\n",
+        "# Predict on the model\n",
+        "y_pred = log_reg.predict(x_test)"
       ],
       "metadata": {
         "id": "FFrSXAtrpx6M"
@@ -2560,6 +2523,54 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#report of logistic regression\n",
+        "report_lR = classification_report(y_test, y_pred)\n",
+        "print(report_lR)"
+      ],
+      "metadata": {
+        "id": "LX71UuZscc4n"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(log_reg.score(x_test,y_test))"
+      ],
+      "metadata": {
+        "id": "TMa6MklkdMFh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "93% accuracy with Logistic Regression"
+      ],
+      "metadata": {
+        "id": "uA9UIUpdYte7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#cofusion matrix of logistic regression\n",
+        "confuse_matrix_lr = confusion_matrix( y_test,y_pred)\n",
+        "print(confuse_matrix_lr)\n",
+        "#ploting confusion matrix\n",
+        "sns.heatmap(confuse_matrix_lr, annot=True, fmt = \".1f\", cmap=\"viridis\")"
+      ],
+      "metadata": {
+        "id": "buevFiZ06bBo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "#### 2. Cross- Validation & Hyperparameter Tuning"
@@ -2569,37 +2580,60 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "# ML Model - 3 Implementation with hyperparameter optimization techniques (i.e., GridSearch CV, RandomSearch CV, Bayesian Optimization etc.)\n",
-        "\n",
-        "# Fit the Algorithm\n",
-        "\n",
-        "# Predict on the model"
+        "Implementing Cross-validated Logistic Regression"
       ],
       "metadata": {
-        "id": "eSVXuaSKpx6M"
+        "id": "3N0SQa0Q7U7-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "logistic = LogisticRegression()"
+      ],
+      "metadata": {
+        "id": "ngU38q7-6sN9"
       },
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "##### Which hyperparameter optimization technique have you used and why?"
+        "scores = cross_val_score(log_reg, x_train, y_train, cv=10)\n",
+        "print('Cross-Validation Accuracy Scores', scores)"
       ],
       "metadata": {
-        "id": "_-qAgymDpx6N"
-      }
+        "id": "7Fx7aJZZ7ee_"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "Answer Here."
+        "scores = pd.Series(scores)\n",
+        "scores.min(), scores.mean(), scores.max()"
       ],
       "metadata": {
-        "id": "lQMffxkwpx6N"
-      }
+        "id": "jdTSz22o7lSN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scores = cross_val_score(log_reg, x_train, y_train, cv=10)\n",
+        "print('Cross-Validation Accuracy Scores', scores)"
+      ],
+      "metadata": {
+        "id": "_-1jTz5m49q6"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2613,10 +2647,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "The maximum accuracy score achieved during cross-validation is 94.42"
       ],
       "metadata": {
-        "id": "MzVzZC6opx6N"
+        "id": "H6fxP2eI-QBS"
       }
     },
     {
@@ -2631,7 +2665,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "the evaluation metrics I used includes accuracy, precision, recall, and F1-score. These metrics provide a comprehensive view of the model's performance, considering both the positive and negative classes, and are common metrics for classification problems."
       ],
       "metadata": {
         "id": "jHVz9hHDKFms"
@@ -2647,9 +2681,71 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "models=[clf,random_forest,log_reg]\n",
+        "name=['Decision Tree Model After Hyperparameter Tuning','Random Forest Model After Hyperparameter Tuning','Logistic Regression']"
+      ],
+      "metadata": {
+        "id": "dSKBzmI14kXP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def accuracy_of_each_model(model, x_train, x_test, y_train, y_test):\n",
+        "    # Predicting train and test data\n",
+        "    y_train_preds = model.predict(x_train)\n",
+        "    y_test_preds = model.predict(x_test)\n",
+        "\n",
+        "    # Lists to store scores for each metric\n",
+        "    train_scores = []\n",
+        "    test_scores = []\n",
+        "    metrics = ['Accuracy_Score', 'Precision_Score', 'Recall_Score']\n",
+        "\n",
+        "    # Get the accuracy scores\n",
+        "    train_accuracy_score = accuracy_score(y_train, y_train_preds)\n",
+        "    test_accuracy_score = accuracy_score(y_test, y_test_preds)\n",
+        "\n",
+        "    train_scores.append(train_accuracy_score)\n",
+        "    test_scores.append(test_accuracy_score)\n",
+        "\n",
+        "    # Get the precision scores\n",
+        "    train_precision_score = precision_score(y_train, y_train_preds)\n",
+        "    test_precision_score = precision_score(y_test, y_test_preds)\n",
+        "\n",
+        "    train_scores.append(train_precision_score)\n",
+        "    test_scores.append(test_precision_score)\n",
+        "\n",
+        "    # Get the recall scores\n",
+        "    train_recall_score = recall_score(y_train, y_train_preds)\n",
+        "    test_recall_score = recall_score(y_test, y_test_preds)\n",
+        "\n",
+        "    train_scores.append(train_recall_score)\n",
+        "    test_scores.append(test_recall_score)\n",
+        "\n",
+        "    return train_scores, test_scores, metrics\n",
+        "\n",
+        "for model_idx, model in enumerate(models):\n",
+        "    train_score_, test_score_, metrics_ = accuracy_of_each_model(model, x_train, x_test, y_train, y_test)\n",
+        "\n",
+        "    print(\"-*-*-\"*3 + f\"{name[model_idx]}\" + \"-*-*-\"*4)\n",
+        "    print(\"\")\n",
+        "    print(pd.DataFrame(data={'Metrics': metrics_, 'Train_Score': train_score_, 'Test_Score': test_score_}))\n",
+        "    print(\"\")\n"
+      ],
+      "metadata": {
+        "id": "kUaoE0pBdClw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "the *Logistic Regression model* has achieved a competitive test accuracy and can be a reasonable choice, especially if interpretability is important. However, if maximizing accuracy is the primary goal and interpretability is less critical, the Random Forest model may be preferred."
       ],
       "metadata": {
         "id": "6ksF5Q1LKTVm"
@@ -2667,7 +2763,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "*Random Forest*\n",
+        "It is an ensemble learning technique that combines multiple decision trees to make predictions. One of the benefits of Random Forest is its ability to assess feature importance, which helps understand the contribution of each feature to the model's predictions."
       ],
       "metadata": {
         "id": "YnvVTiIxBL-C"
@@ -2743,7 +2840,43 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Write the conclusion here."
+        "the three models that were used for classification problemare:\n",
+        "\n",
+        "\n",
+        "\n",
+        "1.  Decision Tree\n",
+        "2.  Random Forest, and\n",
+        "3.  Logistic Regression\n",
+        "\n",
+        "\n",
+        "For Decision Tree:\n",
+        "\n",
+        "Hyperparameter tuning was performed to fine-tune the model. The priority for classification metrics was Recall, followed by Accuracy and ROC AUC.\n",
+        "The Decision Tree model achieved competitive results in terms of accuracy.\n",
+        "Interpretability is a notable advantage of this model.\n",
+        "Key features for prediction included overall rating and Value for money.\n",
+        "\n",
+        "\n",
+        "\n",
+        "For Random Forest:\n",
+        "\n",
+        "We applied hyperparameter tuning to optimize the model's performance.\n",
+        "The priority for classification metrics remained the same.\n",
+        "Random Forest exhibited robust performance and accuracy above 90%.\n",
+        "It combines multiple decision trees to handle complex relationships in the data.\n",
+        "Important features for predictions were the overall rating and Value for money.\n",
+        "\n",
+        "\n",
+        "For Logistic Regression:\n",
+        "\n",
+        "Like the other models, hyperparameter tuning was conducted.\n",
+        "Similar priority for classification metrics was applied.\n",
+        "Logistic Regression achieved an accuracy of over 90% and was chosen as the best-performing model.\n",
+        "The most important features for prediction were the overall rating and Value for money.\n",
+        "This model can help airlines identify influential passengers for revenue growth.\n",
+        "\n",
+        "\n",
+        "In conclusion, all three models achieved high accuracy, and the choice among them depends on factors like interpretability and specific business goals. Logistic Regression stood out as the best model overall, but Decision Tree and Random Forest also provided valuable insights and competitive performance. Airlines can use these models to identify influential passengers and improve their services accordingly.\n"
       ],
       "metadata": {
         "id": "Fjb1IsQkh3yE"
