--- a/Airline_ML_Classification_Capstone_.ipynb
+++ b/Airline_ML_Classification_Capstone_.ipynb
@@ -6,7 +6,6 @@
       "provenance": [],
       "collapsed_sections": [
         "dEUvejAfpUZe",
-        "Fd15vwWVpUZf",
         "-Kee-DAl2viO",
         "gIfDvo9L0UH2"
       ],
@@ -5260,28 +5259,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "t-test was chosen because it is a suitable statistical test for comparing means of two independent groups, and it provides a p-value that helps determine whether the observed differences are statistically significant."
       ],
       "metadata": {
         "id": "oLDrPz7HpUZf"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### Why did you choose the specific statistical test?"
-      ],
-      "metadata": {
-        "id": "Fd15vwWVpUZf"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "4xOGYyiBpUZf"
       }
     },
     {
@@ -5321,35 +5302,6 @@
       ],
       "metadata": {
         "id": "Nff-vKELpZyI"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Perform Statistical Test to obtain P-Value"
-      ],
-      "metadata": {
-        "id": "s6AnJQjtpZyI"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### Which statistical test have you done to obtain P-Value?"
-      ],
-      "metadata": {
-        "id": "kLW572S8pZyI"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "ytWJ8v15pZyI"
       }
     },
     {
@@ -5405,6 +5357,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### Which statistical test have you done to obtain P-Value?"
+      ],
+      "metadata": {
+        "id": "kLW572S8pZyI"
+      }
     },
     {
       "cell_type": "markdown",
